1.1
	+ Use the new row() and ids() API
0.12.101
	+ Bugfix: Postgrey daemon is disabled by default
0.12.100
	+ EBox::MailUserLdap::userAccount and
	EBox::MailUserLdap::getUserLdapValue  dont longer assumme that the
	user exists
	+ Bugfix: MDSize attribute should not be restored in sytems with
	MDSize feature disabled
	+ Bugfix in logs: mail relayed to external smarthost is now
	logged, external smarthost relay denied action also logged, relay
	field now only logs relay data and no unrelated data
	+ Summary changed to reflect the changes in mailfilter module
	+ Added greylist support
	+ Added authentication for external smarthost
	+ Added TLS support for external smarthost
0.12.99
	+ Add support for reporting
0.12.2
	+ Bugfix: Start POP3 over SSL (Port: 995)
0.12.1
	+ Bugfix: Use EBox::Types::Union::Text for unlimited message size
0.12
	+ Bugfix: Checkbox for unlimited size is unchecked, the field
	mentioned, i.e. Size (MB) is activated.
	+ Use the new MVC framework
	+ Add postfix to sasl group instead of dpkg-stateoverriding stuff
	+ Update INSTALL doc
	+ Use eBox OID number in LDAP schemas
0.11.101
	+ Fixed bug when removing users in non-quota installations
	+ Do not remove init rc scripts
	+ Add port 465 (SMTP over SSL) to mail service, old outlook version
	  will use this port
	+ Fixed bug in group alias that broke this feature for mail
	accounts which its name was different to the username
0.11.100
	+ Create certificate for smtpd server
	+ Disabled filter appears in the filter lists as disabled
	(previously they don't appear at all)
	+ Module activation dependency with module which provides the
	acitve filter
0.11.99
	+ Add mail dispatcher to notify eBox events using this SMTP server
	+ Enhanced strings
0.11
	+ Wrap service call with ebox-unblock-exec
	+ Fix typo in message
0.10.99
	+ New release
0.10
	+ New release
0.9.100
	+ Fix some typos 
0.9.99
	+ Fixed bug in configuration backup
	+ Allow other modules to define mail filters

0.9.3
	+ New release
0.9.2